--- a/views/blogs/create.ejs
+++ b/views/blogs/create.ejs
@@ -4,6 +4,7 @@
 <body>
     <%- include('../partials/nav.ejs') %>
     <div class="container">
+      <h1>Create a Post:</h1>
       <form action="/blogs" method="post" class="row g-3">
         <div class="col-md-6">
           <label for="title" class="form-label">Blog title: </label>
